<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4CCF4"
    tools:context=".Crear">

    <TextView
        android:id="@+id/Nombre"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/nombre"
        android:textAllCaps="false"
        android:textColor="#6C6A6A"
        android:textIsSelectable="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Fecha"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fecha"
        android:textColor="#6C6A6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Hora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Email"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/email"
        android:textColor="#6C6A6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Contra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Hora"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hora"
        android:textColor="#6C6A6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Contra"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/contrase_a"
        android:textColor="#6C6A6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:backgroundTint="#485BC3"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>